migrate login and register to graphql

--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.7",
     "classnames": "^2.2.5",
     "firebase": "^4.12.1",
+    "formik": "^0.11.11",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "jwt-decode": "^2.2.0",
     "prop-types": "^15.6.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react": "^16.4.0",
+    "react-apollo": "^2.1.4",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "1.1.4",
     "react-simple-dropdown": "^3.2.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "yup": "^0.25.1"
   },
   "scripts": {
     "start": "react-scripts start",
