--- a/server/package.json
+++ b/server/package.json
@@ -10,19 +10,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.0.0-beta.4",
-    "apollo-server-express": "^2.0.0-beta.3",
+    "apollo-server": "2.0.0-beta.10",
+    "apollo-server-express": "^2.0.0-rc.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "graphql": "^0.13.2",
     "jsonwebtoken": "^8.2.2",
-    "mongoose": "^5.1.4"
+    "mongoose": "^5.1.4",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.37.10"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
     "@babel/node": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
     "nodemon": "^1.17.5"
   }
 }
