--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "2.0.0-beta.10",
-    "apollo-server-express": "^2.0.0-rc.0",
+    "apollo-server": "^2.0.0-rc.2",
+    "apollo-server-express": "^2.0.0-rc.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "graphql": "^0.13.2",
     "jsonwebtoken": "^8.2.2",
+    "merge-graphql-schemas": "^1.5.2",
     "mongoose": "^5.1.4",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
