--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "apollo-link-error": "^1.1.0",
     "apollo-link-http": "^1.5.4",
     "apollo-link-ws": "^1.0.8",
+    "apollo-utilities": "^1.0.16",
     "classnames": "^2.2.5",
     "firebase": "^4.12.1",
     "formik": "^0.11.11",
