--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.0.0-rc.2",
-    "apollo-server-express": "^2.0.0-rc.2",
+    "apollo-resolvers": "^1.3.1",
+    "apollo-server": "^2.0.0-rc.6",
+    "apollo-server-express": "^2.0.0-rc.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "graphql": "^0.13.2",
+    "graphql-redis-subscriptions": "^1.5.0",
     "jsonwebtoken": "^8.2.2",
     "merge-graphql-schemas": "^1.5.2",
     "mongoose": "^5.1.4",
